traefik/dashboard/ingressroute-redirect.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard-http
spec:
  entryPoints:
  - web
  routes:
  - kind: Rule
    match: Host("traefik.apps.symphorines.home")
    services:
    - name: api@internal
      kind: TraefikService
    middlewares:
    - name: redirect-permanent
